S20-952, plugin config update flow is fixed
