# swagger/api-spec.yml
@@ -289,6 +289,11 @@ paths:
           required: true
           description: The id of the plugin to retrieve
           type: string
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/pluginConfig"
       responses:
         200:
           description: plugin is removed from registry
